# signals-light

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
include/signals_light/: signal.hpp
tests/: CMakeLists.txt  signal.test.cpp
